Bugfix #7: Use of absolute paths for the settings file